# WKOpenVR-Smoothing

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.ps1  quick.ps1  version.txt
.githooks/: commit-msg  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_WORKFLOW.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/release-extras/: .gitkeep
.github/release-template/: README.md  install.md  links.md  uninstall.md  what-you-need-to-do.md
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
driver_01fingersmoothing/: driver.vrdrivermanifest
driver_01fingersmoothing/resources/: driver.vrresources
driver_01fingersmoothing/resources/settings/: default.vrsettings
install/: installer.nsi
lib/: CMakeLists.txt
src/: CMakeLists.txt  Config.cpp  Config.h  IPCClient.cpp  IPCClient.h  main.cpp
src/common/: Protocol.h  Version.h
src/driver/: CMakeLists.txt  FingerSmoothingDriver.cpp  Heartbeat.cpp  Heartbeat.h  IPCServer.cpp  IPCServer.h  InterfaceHookInjector.cpp  InterfaceHookInjector.h  Logging.cpp  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.h  SkeletalHookInjector.cpp  SkeletalHookInjector.h  SmoothingDriverModule.cpp  dllmain.cpp
src/overlay/: CMakeLists.txt  Config.cpp  Config.h  Configuration.cpp  Configuration.h  FingerSmoothing.cpp  FingerSmoothing.rc  IPCClient.cpp  IPCClient.h  Resource.h  SmoothingFingers.cpp  SmoothingPlugin.cpp  SmoothingPlugin.h  SmoothingPrediction.cpp  UserInterface.cpp  UserInterface.h  fingersmoothing.manifest  manifest.vrmanifest  stdafx.cpp
wiki/: Changelog.md  Home.md  README.md
